# portfolio

./: README.md
demo-projects/python-backend/: .dockerignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
demo-projects/python-backend/alembic_migrations/: env.py  script.py.mako
demo-projects/python-backend/alembic_migrations/versions/: 176484337cb3_initial_migration.py  5e8b5585c484_initial.py
demo-projects/python-backend/sample_backend/: conftest.py  db.py  main.py  main_test.py  notes.py  notes_test.py
demo-projects/python-backend/sample_backend/connectors/: __init__.py  db.py  notes.py  notes_test.py
demo-projects/python-backend/sample_backend/core/: __init__.py  config.py
demo-projects/python-backend/sample_backend/entities/: __init__.py  db_models.py
demo-projects/python-backend/sample_backend/interface/: api.py  api_test.py  conftest.py  dependencies.py
demo-projects/python-backend/sample_backend/interface/routers/: __init__.py  notes.py  notes_test.py
demo-projects/python-backend/sample_backend/interface/schemas/: __init__.py  common.py  notes.py
demo-projects/python-backend/sample_backend/services/: __init__.py  notes.py
demo-projects/python-backend/sample_backend/tests/: config.py  utils.py
demo-projects/python-backend/tests/integrated/: test_notes.py
demo-projects/sample_backend_app/: Dockerfile  Makefile  docker-compose.override.yml  requirements.txt
demo-projects/sample_backend_app/sample_backend/: api_schemas.py  config.py  db.py  services.py
demo-projects/sample_backend_app/tests/: config.py
demo-projects/sample_backend_app/tests/unit/: test_app_endpoints.py
